...
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewDescription">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/nid_app_demo_first_name"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:paddingBottom="8dp" />
...
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLayoutFirstName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/nid_app_demo_last_name"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:paddingBottom="8dp" />
...
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLayoutBirthDay">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/nid_app_demo_email"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="8dp" />
...
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLayoutEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/nid_app_demo_home_city"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="8dp" />
...
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLayoutHomeCity">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/homeZipCode"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/nid_app_demo_home_zip_code"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="5"
...
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLayoutZipCode">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/nid_app_demo_phone_number"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:maxLength="10"
...
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLayoutPhoneNumber">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employerlbl"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/nid_app_demo_employer"
                        android:imeOptions="actionDone"
                        android:paddingBottom="8dp" />

...
                        android:maxLength="10"
                        android:paddingBottom="8dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonContinue"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#3579F7"
                    android:text="@string/nid_app_demo_continue"
                    android:textAllCaps="false"
...
